--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ article .icon {
 
 .project-btn {
   color: black;
-  border-color: rgb(163, 163, 163);
+  border-color: black
 }
 
 /* CONTACT */
