--- a/style.css
+++ b/style.css
@@ -619,3 +619,25 @@ footer {
     font-size: 1.5rem;
   }
 }
+
+.card-icon {
+  width: 24px;
+  height: 24px;
+  max-width: 100%;
+  vertical-align: middle;
+  cursor: default;
+}
+
+@media (max-width: 768px) {
+  .card-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card-icon {
+    width: 18px;
+    height: 18px;
+  }
+}
