--- a/style.css
+++ b/style.css
@@ -620,24 +620,11 @@ footer {
   }
 }
 
-.card-icon {
+/* Icon Styles */
+.icon {
   width: 24px;
   height: 24px;
   max-width: 100%;
   vertical-align: middle;
   cursor: default;
-}
-
-@media (max-width: 768px) {
-  .card-icon {
-    width: 20px;
-    height: 20px;
-  }
-}
-
-@media (max-width: 480px) {
-  .card-icon {
-    width: 18px;
-    height: 18px;
-  }
 }
