--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ section {
 /* Profile Section */
 .profile-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   text-align: center;
   padding: 4rem 0;
