--- a/style.css
+++ b/style.css
@@ -203,10 +203,13 @@ section {
 /* Profile Section */
 .profile-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse; /* Changed to row-reverse */
   align-items: center;
+  justify-content: center;
   text-align: center;
   padding: 4rem 0;
+  gap: 3rem;
+  flex-wrap: wrap;
 }
 
 .profile-pic {
