--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ section {
   font-size: 1.5rem;
   color: #1f2937;
   margin-bottom: 1rem;
+  justify-content: center;
 }
 
 .job-location, .job-duration {
