--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  background-color: #f0f2ff;
+  background-color: #f5f7fa;
   color: #1f2937;
   line-height: 1.6;
 }
