--- a/style.css
+++ b/style.css
@@ -588,8 +588,8 @@ section {
 
 .certificate-img {
   width: 100%;
-  height: 170px;
-  object-fit: cover;
+  height: 150px;
+  object-fit: contain;
   border-radius: 0.5rem;
   margin-bottom: 0.5rem;
 }
