--- a/style.css
+++ b/style.css
@@ -587,9 +587,9 @@ section {
 }
 
 .certificate-img {
-  width: 200%;
+  width: 100%;
   height: 150px;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 0.5rem;
   margin-bottom: 0.5rem;
 }
